fix icon align

--- a/app/assets/stylesheets/components/_report_form.scss
+++ b/app/assets/stylesheets/components/_report_form.scss
@@ -6,18 +6,6 @@
   flex-direction: column;
 }
 
-// .report-border {
-//   width: 80%;
-//   padding: 4%;
-//   border-radius: 10px;
-//   background: $white;
-//   box-shadow: 0px 5px 5px 0px rgba(142, 159, 78, 0.20);
-//   border: 2px solid $green;
-
-//   h2 {
-//     margin: 0;
-//   }
-// }
 
 .option-wrapper {
   display: flex;
@@ -34,12 +22,14 @@
     h2 {
       font-weight: 600;
     }
+    i {
+      font-size: 28px;
+    }
 }
 
 .option-0 {
   color: $green;
   border-color: $green;
-  font-size: 28px;
   box-shadow: 0px 5px 5px 0px rgba(142, 159, 78, 0.20);
 }
 
@@ -47,13 +37,11 @@
   background-color: $green;
   color: $white;
   border-style: none;
-  font-size: 28px;
 }
 
 .option-1 {
   color: $yellow;
   border-color: $yellow;
-  font-size: 28px;
   box-shadow: 0px 5px 5px 0px rgba(142, 159, 78, 0.20);
 }
 
@@ -61,13 +49,11 @@
   background-color: $yellow;
     color: $white;
     border-style: none;
-    font-size: 28px;
 }
 
 .option-2 {
   color: $red;
   border-color: $red;
-  font-size: 28px;
   box-shadow: 0px 5px 5px 0px rgba(184, 55, 54, 0.20);
 }
 
@@ -75,7 +61,6 @@
   background-color: $red;
   color: $white;
   border-style: none;
-  font-size: 28px;
 }
 
 .category-icon{
